fix: row selector alignment

--- a/react/selectable-nested-rows/src/Example/example.scss
+++ b/react/selectable-nested-rows/src/Example/example.scss
@@ -42,6 +42,10 @@
   padding-left: 1rem;
 }
 
+.cds--checkbox-wrapper.row-selector {
+  margin-block-end: 0;
+}
+
 .row-content {
   flex: 1 0 auto;
   padding-left: 1rem;
@@ -54,7 +58,7 @@
   position: absolute;
   bottom: -1px;
   left: -1rem;
-  height: 0.125rem;
+  height: 1px;
   background-color: var(--cds-layer, #f4f4f4);
 }
 
